# se2_navigation

./: .gitignore  LICENSE  README.md
car_demo/car_demo/: CMakeLists.txt  package.xml
car_demo/car_demo/config/: example.yaml  prius_controller_parameters.yaml  prius_path_tracker_ros_parameters.yaml  prius_pid_parameters.yaml  reeds_shepp_planner_ros.yaml
car_demo/car_demo/launch/: demo.launch  demo_autonomous.launch  demo_joystick.launch
car_demo/car_demo/nodes/: joystick_translator
car_demo/car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
car_demo/car_demo/rviz/: demo.rviz  demo_autonomous.rviz  demo_joystick.rviz
car_demo/car_demo/src/: PIDController.cpp  PriusControllerRos.cpp  prius_controller_node.cpp
car_demo/car_demo/worlds/: empty.world
car_demo/prius_msgs/: CMakeLists.txt  package.xml
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/include/pure_pursuit/: LongitudinalVelocityController.hpp  Path.hpp  PathPreprocessing.hpp  PathPreprocessor.hpp  PathTracker.hpp  TrackingProgress.hpp  common.hpp  geometry.hpp  math.hpp  typedefs.hpp
pure_pursuit/src/: AckermannSteeringController.cpp  ConstantVelocityController.cpp  HeadingController.cpp  LongitudinalVelocityController.cpp  MobileBaseHeadingController.cpp  PathPreprocessing.cpp  PathPreprocessor.cpp  PathTracker.cpp  ProgressValidator.cpp  Stopwatch.cpp  TrackingProgress.cpp  geometry.cpp  math.cpp
pure_pursuit/test/: GeometryTest.cpp  PathTest.cpp  test_helpers.cpp  test_helpers.hpp  test_pure_pursuit.cpp
pure_pursuit_core/: CMakeLists.txt  README.md  package.xml
pure_pursuit_core/include/pure_pursuit_core/: Path.hpp  PathTracker.hpp  ProgressValidator.hpp  Stopwatch.hpp  common.hpp  creators.hpp  math.hpp
pure_pursuit_core/src/: AckermannSteeringController.cpp  AdaptiveVelocityController.cpp  ConstantVelocityController.cpp  HeadingController.cpp  LongitudinalVelocityController.cpp  MobileBaseHeadingController.cpp  PathPreprocessor.cpp  PathTracker.cpp  ProgressValidator.cpp  SimplePathTracker.cpp  Stopwatch.cpp  common.cpp  creators.cpp  math.cpp
pure_pursuit_core/test/: AckermannSteeringControllerTest.cpp  GeometryTest.cpp  PathTest.cpp  test_helpers.cpp  test_helpers.hpp  test_pure_pursuit.cpp
pure_pursuit_ros/: CMakeLists.txt  README.md  package.xml
pure_pursuit_ros/config/: PurePursuit.cfg  PurePursuitAdaptiveVel.cfg  dd_example.cfg  example.yaml
pure_pursuit_ros/include/pure_pursuit_ros/: AckermannSteeringControllerLoader.hpp  AckermannSteeringControllerRos.hpp  AdaptiveVelocityControllerRos.hpp  Loaders.hpp  SimplePathTrackerRos.hpp  loaders.hpp  visualization_helpers.hpp
pure_pursuit_ros/launch/: standalone_example.launch
pure_pursuit_ros/src/: AckermannSteeringControllerLoader.cpp  AckermannSteeringControllerRos.cpp  AdaptiveVelocityControllerRos.cpp  Loaders.cpp  SimplePathTrackerRos.cpp  dd_standalone_example.cpp  loaders.cpp  visualization_helpers.cpp
se2_approach_pose_planning/approach_pose_planner/: CMakeLists.txt  README.md  package.xml
se2_approach_pose_planning/approach_pose_planner/src/: ApproachPoseHeuristic.cpp  ApproachPosePlanner.cpp  LineOfSightApproachStateValidator.cpp
se2_approach_pose_planning/approach_pose_planner/test/: ApproachPosePlannerTest.cpp  test_planning.cpp
se2_approach_pose_planning/approach_pose_planner_msgs/: CMakeLists.txt  README.md  package.xml
se2_approach_pose_planning/approach_pose_planner_msgs/msg/: ApproachPoseRequestMsg.msg
se2_approach_pose_planning/approach_pose_planner_msgs/srv/: RequestApproachPoseSrv.srv
se2_approach_pose_planning/approach_pose_planner_ros/: CMakeLists.txt  README.md  package.xml
se2_grid_map_generator/: CMakeLists.txt  README.md  package.xml
se2_grid_map_generator/config/: default.yaml
se2_grid_map_generator/launch/: se2_grid_map_generator.launch
se2_grid_map_generator/src/: GridMapGenerator.cpp  se2_grid_map_generator_node.cpp
se2_grid_map_generator_msgs/: CMakeLists.txt  README.md  package.xml
se2_grid_map_generator_msgs/msg/: Circle2D.msg  CircularObstacle.msg  Obstacle.msg  Polygon2D.msg  PolygonObstacle.msg  Position2D.msg  RectangularObstacle.msg
se2_grid_map_generator_msgs/srv/: AddCircularObstacle.srv  AddNan.srv  AddObstacle.srv  AddPolygonObstacle.srv  ResetMap.srv  SaveMap.srv  SetUniformValue.srv  UpdateMapPosition.srv
se2_navigation_msgs/: CMakeLists.txt  README.md  package.xml
se2_navigation_msgs/msg/: ControllerCommandMsg.msg  PathMsg.msg  PathRequestMsg.msg  PathSegmentMsg.msg
se2_navigation_msgs/src/: conversions.cpp
se2_navigation_msgs/srv/: CurrentStateRequestSrv.srv  RequestPathSrv.srv  SendControllerCommandSrv.srv
se2_planning/: CMakeLists.txt  README.md  package.xml  se2_planner.launch
se2_planning/src/: Bounds.cpp  GridMapFastStateValidator.cpp  GridMapLazyStateValidator.cpp  GridMapStateValidator.cpp  HeightMap.cpp  Map.cpp  OccupancyMap.cpp  OmplPlanner.cpp  OmplReedsSheppPlanner.cpp  OmplReedsSheppPlannerRos.cpp  State.cpp  StateValidator.cpp  ompl_planner_creators.cpp  planning_benchmark.cpp  se2_planner_node.cpp
se2_planning/test/: GridMapLazyStateValidatorTest.cpp  GridMapStateValidatorTest.cpp  OmplReedsSheppPlannerTest.cpp  ompl_planner_creators_test.cpp  test_helpers.cpp  test_helpers.hpp  test_planning.cpp
se2_planning_ros/: CMakeLists.txt  README.md  package.xml
se2_planning_ros/config/: reeds_shepp_planner_ros.yaml  reeds_shepp_planner_ros_example.yaml
se2_planning_ros/launch/: se2_planner.launch
se2_planning_ros/src/: GridMapLazyStateValidatorRos.cpp  OccupancyMapRos.cpp  OmplReedsSheppPlannerRos.cpp  PlannerRos.cpp  common.cpp  loaders.cpp  se2_planner_node.cpp
se2_planning_rviz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
se2_planning_rviz/rviz/: default.rviz
se2_planning_rviz/src/: EditButton.cpp  PlanningInteractiveMarkers.cpp  PlanningPanel.cpp  PoseWidget.cpp  edit_button.cpp  planning_interactive_markers.cpp  planning_panel.cpp  pose_widget.cpp
se2_visualization_ros/: CMakeLists.txt  README.md  package.xml
se2_visualization_ros/src/: visualization_helpers.cpp
(+77 files in other folders)
