<?xml version="1.0"?>
<package format="2">

  <name>se2_grid_map_generator_msgs</name>
  <version>0.0.0</version>
  <description>Messages for planners and controllers.</description>

  <maintainer email="jelavice@ethz.ch">jelavice</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>