<?xml version="1.0"?>
<package format="2">

  <name>se2_navigation_msgs</name>
  <version>0.0.0</version>
  <description>Messages for planners and controllers.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jelavice@ethz.ch">jelavice</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_export_depend>eigen</build_export_depend>	
  <exec_depend>message_runtime</exec_depend>



</package>