<?xml version="1.0"?>
<package format="2">
	<name>se2_planning_ros</name>
	<version>0.1.0</version>
	<description>Pure pursuit controller.</description>
	<maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>eigen</depend>
	<depend>ompl</depend>
	<depend>se2_planning</depend>
	<depend>roscpp</depend>
	<depend>nav_msgs</depend>
	<depend>tf2</depend>
	<depend>yaml-cpp</depend>
	<depend>se2_navigation_msgs</depend>
	<exec_depend>se2_planning_rviz</exec_depend>
	
</package>
