<?xml version="1.0"?>
<package format="2">
	<name>se2_visualization_ros</name>
	<version>0.1.0</version>
	<description>Visualization helpers for planner and controller</description>
	<maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>roscpp</depend>
	<depend>eigen</depend>
	<depend>visualization_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>tf2</depend>
	<depend>eigen_conversions</depend>
	
</package>
