<?xml version="1.0"?>
<package format="2">

  <name>approach_pose_planner_msgs</name>
  <version>0.0.0</version>
  <description>Approach pose planner msgs</description>

  <maintainer email="jelavice@ethz.ch">jelavice</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>se2_navigation_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>